azureps-cmdlets-docs/ResourceManager/AzureRM.HDInsight/v1.1.4/Get-AzureRmHDInsightJobOutput.md
---
external help file: Microsoft.Azure.Commands.HDInsight.dll-Help.xml
ms.assetid: 8ACEF132-C795-405B-8A1C-90D35E744272
online version: 
schema: 2.0.0
---

# Get-AzureRmHDInsightJobOutput

## SYNOPSIS
Gets the log output for a job from the storage account associated with a specified cluster.

## SYNTAX

### Display
```
Get-AzureRmHDInsightJobOutput [-ClusterName] <String> [-JobId] <String> [-DefaultContainer] <String>
 [-DefaultStorageAccountName] <String> [-DefaultStorageAccountKey] <String> -HttpCredential <PSCredential>
 [[-ResourceGroupName] <String>] [-DisplayOutputType <JobDisplayOutputType>] [<CommonParameters>]
```

### Download
```
Get-AzureRmHDInsightJobOutput [-ClusterName] <String> [-JobId] <String> [-DefaultContainer] <String>
 [-DefaultStorageAccountName] <String> [-DefaultStorageAccountKey] <String> -HttpCredential <PSCredential>
 [[-ResourceGroupName] <String>] -DownloadOutputType <JobDownloadOutputType> -Folder <String>
 [<CommonParameters>]
```

## DESCRIPTION
The **Get-AzureRmHDInsightJobOutput** cmdlet gets the log output for a job from the Storage account associated with an Azure HDInsight cluster.

## EXAMPLES

### Example 1: Get the log output for a job
```
PS C:\># Cluster info
PS C:\> $clusterName = "your-hadoop-001"
PS C:\> $clusterCreds = Get-Credential

# Hive job details
PS C:\> $statusFolder = "<status folder>"
PS C:\> $query = "<query here>"

PS C:\> New-AzureRmHDInsightHiveJobDefinition -StatusFolder $statusFolder `
            -Query $query `
        | Start-AzureRmHDInsightJob `
            -ClusterName $clusterName `
            -ClusterCredential $clusterCreds `
        | Get-AzureRmHDInsightJobOutput `
            -ClusterName $clusterName `
            -ClusterCredential $clusterCreds
```

This command gets the log output from the cluster named your-hadoop-001.

## PARAMETERS

### -ResourceGroupName
Specifies the name of the resource group.

```yaml
Type: String
Parameter Sets: (All)
Aliases: 

Required: False
Position: 0
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -ClusterName
Specifies the name of the cluster.

```yaml
Type: String
Parameter Sets: (All)
Aliases: 

Required: True
Position: 1
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -JobId
Specifies the job ID of the job whose output will be fetched.

```yaml
Type: String
Parameter Sets: (All)
Aliases: 

Required: True
Position: 2
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -DefaultContainer
Specifies the default container name.

```yaml
Type: String
Parameter Sets: (All)
Aliases: 

Required: True
Position: 3
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -DefaultStorageAccountName
Specifies the default Storage account name.

```yaml
Type: String
Parameter Sets: (All)
Aliases: 

Required: True
Position: 4
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -DefaultStorageAccountKey
Specifies the default Storage account key.

```yaml
Type: String
Parameter Sets: (All)
Aliases: 

Required: True
Position: 5
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -DisplayOutputType
Specifies the job output type being requested.
psdx_paramvalues

- StandardOutput
- StandardError

```yaml
Type: JobDisplayOutputType
Parameter Sets: Display
Aliases: 

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -DownloadOutputType
The type of output to download.```yaml
Type: JobDownloadOutputType
Parameter Sets: Download
Aliases: 

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -Folder
The folder to save the output to.```yaml
Type: String
Parameter Sets: Download
Aliases: 

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -HttpCredential
Specifies the cluster login (HTTP) credentials for the cluster.

```yaml
Type: PSCredential
Parameter Sets: (All)
Aliases: ClusterCredential

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters
This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see about_CommonParameters (http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

## OUTPUTS

## NOTES

## RELATED LINKS

[New-AzureRmHDInsightHiveJobDefinition](./New-AzureRmHDInsightHiveJobDefinition.md)

[Start-AzureRmHDInsightJob](./Start-AzureRmHDInsightJob.md)


